【機能追加】右上にアバターアイコンを表示し、ポートフォリオに遷移するようコードを追加。

--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@
     background: var(--brand);
 }
 
+.avatar {
+    width: 32px;
+    height: 32px;
+    object-fit: cover;
+}
+
 body {
     background: #efefef;
 }
